--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+:root {
+  --background-color: rgb(205, 254, 255);
+  --primary-color: #6d348f; /* #170160 */
+  --vibrant-color: #fcff4a;
+  --box-shadow: 2px 2px 2px rgba(77, 77, 1, 0.1);
+}
+
 body {
   box-sizing: border-box;
+  background-color: rgb(205, 254, 255, 0.2);
+  color: var(--primary-color);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
