--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,17 @@
 :root {
-  --background-color: rgb(205, 254, 255);
-  --primary-color: #6d348f; /* #170160 */
+  --background-color: #fffafe; /* rgb(205, 254, 255) */
+  --primary-color: #170160; /* #170160 #6d348f */
   --vibrant-color: #fcff4a;
   --box-shadow: 2px 2px 2px rgba(77, 77, 1, 0.1);
 }
 
-body {
+* {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
   background-color: rgb(205, 254, 255, 0.2);
   color: var(--primary-color);
   margin: 0;
