--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,25 @@
 :root {
-  --background-color: #fffafe; /* rgb(205, 254, 255) */
-  --primary-color: #170160; /* #170160 #6d348f */
+  --background-color: linear-gradient(
+    -225deg,
+    #e3fdf5 0%,
+    #ffe6fa 100%
+  ); /* rgb(205, 254, 255) #fffafe */
+  --primary-color: #170160; /* #170160 #6d348f #070623 */
   --vibrant-color: #fcff4a;
   --box-shadow: 2px 2px 2px rgba(77, 77, 1, 0.1);
+  --button-background: #aef8f9;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  line-height: 1.5;
 }
 
 body {
   background-color: rgb(205, 254, 255, 0.2);
   color: var(--primary-color);
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -25,4 +30,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
 }
