--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -7,6 +7,7 @@
   border-radius: 5px;
   background-color: var(--button-background);
   color: var(--primary-color);
+  cursor: pointer;
   font-size: 0.9rem;
   margin-right: 0.2rem;
   padding: 0.1rem 0.5rem;
